# sorting-visualizer-gui

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/sv/core/: Theme.hpp  Visualizer.hpp
include/sv/database/: HistoryDatabase.hpp
include/sv/math_algs/: BinarySearch.hpp  SieveOfEratosthenes.hpp
include/sv/sorting/: BubbleSort.hpp  ISortAlgorithm.hpp  InsertionSort.hpp  MergeSort.hpp
include/sv/utils/: AlgorithmInfo.hpp
src/: main.cpp
src/core/: Localization.cpp  Theme.cpp  Visualizer.cpp
src/database/: HistoryDatabase.cpp
src/math_algs/: BinarySearch.cpp  SieveOfEratosthenes.cpp
src/sorting/: BubbleSort.cpp  CountingSort.cpp  InsertionSort.cpp  QuickSort.cpp
src/utils/: AlgorithmInfo.cpp
